--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item pe-3">
+            <li class="nav-item ps-3 pe-3">
               <a class="nav-link" aria-current="page" href="#footer">Contact</a>
             </li>
             <li class="nav-item ps-3 pe-3">
